--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
         <body>
+        <div>
+            <input type="text" name="Hello" id = "helloInput"><br> 
+            <button onclick="showUser()">Hello</button>
+
+        </div>
+        <div>
+            Hello <span id="userName"></span>
+        </div>
         <div>Timer</div>
         <div>Board</div>
         <div>
