zadanie numer 3 pkt4 cz1

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <head>
         <title>Hej kamila</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="script.js"></script>
+        <script src="zadanie3.js"></script>
     </head>
         <body>
         <div>
@@ -43,6 +45,6 @@
             <button onclick="decrease()">-1</button>
         </div>
         <div>Comments</div>
-        <script src="script.js"></script>
+       
         </body>
 </html>
