--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             John
         </div>
 
-       <div>
+       <div class = "annoucePlayer">
            Last clicked player is
            <span id="clickedPlayer"></span>
        </div><br/>
@@ -61,7 +61,11 @@
             <button onclick="add()">+1</button>
             <button onclick="decrease()">-1</button>
     </div><br/>
-
+    <div class = "square">
+        <div class="circle">
+            <button class="specialButton"></button>
+        </div>
+    </div>
         <div>Comments</div>
         </body>
 </html>
