Zadanie 4 bez inputa

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="script.js"></script>
         <script src="zadanie3.js"></script>
+        <script src="zadanie4.js"></script>
     </head>
         <body>              
         <div>
@@ -62,10 +63,16 @@
             <button onclick="decrease()">-1</button>
     </div><br/>
     <div class = "square">
-        <div class="circle">
-            <button class="specialButton"></button>
+        <div class="circle" id="colorChanger">
+            
         </div>
+    <div><button class="specialButton" onclick="showColor()"></button></div>
+    <div>
+        <input class = "writeColor" type="text" name="Backround Color" id = "helloColor"><br> 
     </div>
+
+    </div></br></br>
         <div>Comments</div>
         </body>
+     
 </html>
