--- a/zad2.html
+++ b/zad2.html
@@ -9,19 +9,19 @@
         <div class="calculate">
             <div class ="value">
             Value 1
-            <input type="number" name="input1" id = "inputOne"> 
+            <input onchange = "showResult()" type="number" name="input1" id = "inputOne"> 
             </div>
             <div class ="value">
             Value 2
-            <input type="number" name= "input2" id ="inputTwo">
+            <input onchange = "showResult()" type="number" name= "input2" id ="inputTwo">
             </div>
             <div class ="value">
             Value 3
-            <input type="number" name= "input3" id ="inputThree">
+            <input onchange = "showResult()" type="number" name= "input3" id ="inputThree">
             </div>
-            <div class="button">
+           <!--- <div class="button">
             <button onclick="showresult()">Calculate</button>
-            </div>
+            </div>-->
             <div class="result">
             Result: 
             <span id = "displayresult">0</span>
