--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
         <div class = "comments">Comments</div>
         <div class ="text">
-            <textarea class ="textArea" rows="4" cols="50" >Write the comment</textarea>
+            <textarea class ="textArea" rows="4" cols="50" placeholder="elo pisz"></textarea>
             <button onclick ="()" class="specialButton">Add comment</button>
         </div>
 
