added user and date

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     <div class = "allComments">
         <div class = "comments"><h1>Comments</h1>
             <div class ="text">
-                <textarea id="writeComment" class ="textArea" rows="4" cols="50" placeholder="elo pisz"></textarea>
+                <textarea id="writeComment" class ="textArea" rows="4" cols="50" placeholder="Your comment"></textarea>
+                <input id="author" class="signedComment" placeholder="Your Name"></input>
                <button onclick="readInput()" class="specialButton">Add comment</button>
             </div>
         </div>
