--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     </head>
 
     <body>
+        
     <div class = "header"><h1>Connect 3</h1>
         <div class = "user"><input type="text" name="Hello" id = "helloInput">
         <button onclick="showUser()">Hello</button> 
         <p>Hello <span id="userName"></span></p>
+        <div id="kamilatest"></div>
         </div>
     </div>
     <div class = "columns">
@@ -59,6 +61,7 @@
     </div>
 
     <script src="comments.js"></script>
+    <script src="bundle.js"></script>
     </body>
      
 </html>
