--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Hej kamila</title>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="stylesheet" type="text/css" href="colorcircle.css">
+        <!--<link rel="stylesheet" type="text/css" href="colorcircle.css">-->
         <script src="script.js"></script>
         
     </head>
